# HostyExtended

./: README.md  hosty.py  pyproject.toml  requirements-windows.txt  test_modern.py  test_nbt.py
.github/workflows/: ci.yml  release-artifacts.yml
hosty/: factory.py  i18n.py  win_ipc.py  winui_launcher.py
hosty/gtk_ui/: application.py  style.css  window.py
hosty/gtk_ui/dialogs/: about.py  create_server.py  icon_picker.py  manage_playit_tunnel.py  playit_setup.py  preferences.py  shortcuts.py
hosty/gtk_ui/views/: console_view.py  performance_view.py  properties_view.py  server_detail.py  sidebar.py  welcome_view.py
hosty/qt_ui/: utils.py
hosty/qt_ui/mixins/: properties_mixin.py
hosty/qt_ui/pages/: backups_page.py  modrinth_page.py  mods_page.py  worlds_page.py
hosty/shared/backend/: config_manager.py  download_manager.py  java_manager.py  modrinth_client.py  playit_config.py  playit_manager.py  preferences_manager.py  server_manager.py  server_process.py
hosty/shared/utils/: constants.py  image_utils.py  nbt_utils.py  portal.py  subprocess_utils.py  tray_windows.py  windows_instance.py
hosty/winui_ui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  PythonBackendClient.cs  ServerModel.cs  app.manifest  winui_ui.csproj
hosty/winui_ui/Dialogs/: CreateServerDialog.xaml  (+1 more)
packaging/flatpak/: hosty-wrapper.sh  io.github.sugarycandybar.Hosty.yml  python3-requirements.json
packaging/linux/: io.github.sugarycandybar.Hosty.metainfo.xml  meson.build
packaging/windows/: hosty.iss
tests/: test_win_ipc.py
(+24 files in other folders)
