[project]
name = "hosty"
version = "1.7.3"
requires-python = ">=3.13"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"hosty/gtk_ui/**/*.py" = ["E402", "F403", "F405"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
