install_data(
  'io.github.sugarycandybar.Hosty.desktop',
  install_dir: get_option('datadir') / 'applications'
)

install_data(
  'io.github.sugarycandybar.Hosty.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo'
)

install_data(
  'io.github.sugarycandybar.Hosty.svg',
  install_dir: get_option('datadir') / 'icons/hicolor/scalable/apps'
)

install_data(
  'io.github.sugarycandybar.Hosty-symbolic.svg',
  install_dir: get_option('datadir') / 'icons/hicolor/symbolic/apps'
)

install_data(
  'io.github.sugarycandybar.Crucible.svg',
  install_dir: get_option('datadir') / 'icons/hicolor/scalable/apps'
)

install_data(
  'io.github.sugarycandybar.Carabiner.svg',
  install_dir: get_option('datadir') / 'icons/hicolor/scalable/apps'
)

install_data(
  'sliders-horizontal-symbolic.svg',
  install_dir: get_option('datadir') / 'icons/hicolor/symbolic/actions'
)
